# CORSIKA-terrain

./: .gitignore  Manifest.toml  Project.toml  README.md
applications/: CMakeLists.txt  terrain_shower.cpp
scripts/: create_terrain_geometry.jl  grd_to_h5.jl  make_box_scene.jl  plot_shower_hits.jl  plot_shower_hits.py  plot_shower_hits_3d.jl  plot_shower_hits_3d.py  plot_terrain_3d.jl  plot_terrain_box.jl  terrain_h5_to_ply.jl
